--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
     <ul class="country-list"></ul>
     <div class="country-info"></div>
 
-    <script type="module" src="index.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
